Added a TODO for the synthetic example

--- a/toy_benchmark.ipynb
+++ b/toy_benchmark.ipynb
@@ -98,11 +98,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Things to do:\n",
+    "1. Write a `risk` function (copy from `kooplearn`)\n",
+    "2. Resusciate the statistical error estimators from `randSVD_benchmarks.py`\n",
+    "3. Do an equivalent of figure 1 with an additional panel on timings (and maybe another in eigenvalue estimation, given sharp-spectral rates)."
+   ]
   }
  ],
  "metadata": {
